Refactor project configuration and update site details
- Standardized quotes in configuration files for consistency.
- Updated site URL in config.yaml to reflect the new domain.
- Revised package.json to change project name and description.
- Removed unused CV files from the documentation.
- Enhanced README with clearer project structure and deployment instructions.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,6 @@
 {
-  "css.customData": ["./vscode.tailwind.json"],
-  "eslint.validate": [
-    "javascript",
-    "javascriptreact",
-    "astro",
-    "typescript",
-    "typescriptreact"
-  ],
+  "css.customData": ["./tailwind.json"],
+  "eslint.validate": ["javascript", "javascriptreact", "astro", "typescript", "typescriptreact"],
   "files.associations": {
     "*.mdx": "markdown"
   },
