--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@onwidget/astrowind",
-  "version": "1.0.0-beta.52",
-  "description": "AstroWind: A free template using Astro 5.0 and Tailwind CSS. Astro starter theme.",
+  "name": "dental-clinic-website",
+  "version": "1.0.0",
+  "description": "Professional bilingual dental clinic website for Dra. Eugenia Vila in Málaga, Spain. Built with Astro, TypeScript, and Tailwind CSS.",
   "type": "module",
   "private": true,
   "engines": {
